<resources>
    <string name="app_name">Demo Product App</string>
    <string name="create_product">CREATE PRODUCT</string>
    <string name="show_product">SHOW PRODUCT</string>
    <string name="product_name">Product name</string>
    <string name="product_desc">Product description</string>
    <string name="sale_price">Sale Price</string>
    <string name="regular_price">Regular Price</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="insert_mock"> Insert Mock Data</string>
</resources>